# zero2prod-axum

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app-spec.yaml
.cargo/: config.toml
.github/workflows/: general.yaml
configuration/: base.yaml  production.yaml
entity/: Cargo.toml
entity/src/entities/: mod.rs  prelude.rs  subscription_tokens.rs  subscriptions.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250107_122803_create_subscriptions_table.rs  m20250112_124700_create_subscription_tokens_table.rs  m20250117_135648_create_users_table.rs
migration/src/migrations/: mod.rs
migrations/: 20240421074127_create_subscriptions_table.sql
scripts/: init_postgres.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
templates/: login.html
tests/: health_check.rs
tests/api/: health_check.rs  helper.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
