[package]
name = "zero2prod-axum"
version = "0.1.0"
authors = ["Jaeson Fan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod-axum"

[workspace]
members = ["entity", "migration"]

[dependencies]
# ORM entities and migration scripts
entity = { path = "entity" }
migration = { path = "migration" }

# Project dependencies
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
axum-tracing-opentelemetry = { version = "0.25", features = ["tracing_level_info"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
claims = "0.8"
config = "0.15"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
unicode-segmentation = "1.12"
uuid = { version = "1.12", features = ["v4", "serde"] }
validator = "0.19"

[dependencies.sea-orm]
version = "1.1"
default-features = false
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"]

[dev-dependencies]
fake = "3.1"
linkify = "0.10"
quickcheck = "1.0"
quickcheck_macros = "1.0"
wiremock = "0.6"
