[package]
name = "zero2prod-axum"
version = "0.1.0"
authors = ["Jaeson Fan"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod-axum"

[workspace]
members = ["entity", "migration"]

[dependencies]
# ORM entities and migration scripts
entity = { path = "entity" }
migration = { path = "migration" }

# Project dependencies
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
claims = "0.8"
config = "0.15"
minijinja = { version = "2.9", features = ["loader"] }
rand = { version = "0.9", features = ["std_rng"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.6"
serde_json = "1"
thiserror = "2"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["trace"] }
tower-request-id = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12"
uuid = { version = "1.16", features = ["v4", "serde"] }
validator = "0.20"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sea-orm]
version = "1.1"
default-features = false
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"]

[dev-dependencies]
fake = "4.2"
linkify = "0.10"
quickcheck = "1"
quickcheck_macros = "1"
wiremock = "0.6"
